--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!-- <link rel="stylesheet" href="css/style.css"> -->
   </head>
   <body>
-      <!--Шапка, навигация-->
-      <header class="page-header">
-		<div class="page-header__nav-wrap">
+    <!--Шапка, навигация-->
+    <header class="page-header">
+		<div class="page-header__wrap">
 			<nav class="navigation">
 				<ul class="navigation__list">
 					<li class="navigation__item"><a href="#">Карта штата</a></li>
@@ -17,149 +17,151 @@
 					<li class="navigation__item"><a href="#">Гостиницы</a></li>
 				</ul>
 			</nav>
-		</div>
-		
-		<!--Логотип-->
-		<div class="page-header__logo-wrap">
-            <a class="logo-link" href="index.html">
-                <img src="img/logo.png" alt="logo">
-            </a>
-		</div>
-      </header>
-	  
-      <!--Основной контент-->
-      <main>
-		<!--Карточка города-->
-		<div class="card">
-          <div class="card__wrap">
-            <img class="card__greeting" src="img/card__greeting.png" alt="greeting"></img>
-            <img class="card__main-logo" src="img/card__main-logo.png" alt="main-logo">Sedona</img>
-            <img class="card__slogan" src="img/card__slogan" alt="slogan">Because the Grand Canyon sucks!</img>
-          </div>
-		</div>
-		
-		<!--Описание-->
-        <div class="descr">
-			<div class="descr__wrap">
-				<h1 class="descr__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-				<p class="descr__text">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</p>
+			<!--Логотип-->
+			<div class="logo">
+            	<a class="logo__link" href="index.html">
+                	<img src="img/logo.png" alt="logo">
+            	</a>
 			</div>
-            <!--Причины-->
-			<!--1 Причина-->
-            <div class="reason">
-				<div class="reason__item">
-					<!--Заголовок 1 причины-->
-					<div class="reason__header">
-						<h2 class="reason__title">Настоящий городок</h2>
-						<p class="reason__number">-№1-</p>
-						<p class="reason__descr-title">Седона не атракцион для туристов, там течет своя жизнь</p>
-					</div>
-					<!--Картинка 1 причины-->
-					<div class="reason__image">
-						<img></img>
+		</div>
+    </header>
+	  
+    <!--Основной контент-->
+    <main>
+    	<div class="main__wrap">
+			<!--Карточка города-->
+			<div class="card">
+          		<div class="card__wrap">
+            		<img class="card__greeting" src="img/card__greeting.png" alt="Welcome -- to the gargeous --"></img>
+            		<img class="card__main-logo" src="img/card__main-logo.png" alt="Sedona"></img>
+            		<img class="card__slogan" src="img/card__slogan" alt="Because the Grand Canyon sucks!"></img>
+          		</div>
+			</div>
+		
+			<!--Описание-->
+        	<div class="description">
+				<div class="description__wrap">
+					<h1 class="description__title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+					<p class="description__text">Рассмотрим 5 причин, по которым Седона круче чем Гранд Каньон!</p>
+				</div>
+			</div>
+            	<!--Причины-->
+				<!--1 Причина-->
+            	<div class="reasons">
+					<div class="reason">
+						<!--Заголовок 1 причины-->
+						<div class="reason__header">
+							<h2 class="reason__title">Настоящий городок</h2>
+							<p class="reason__number">-№1-</p>
+							<p class="reason__descr-title">Седона не атракцион для туристов, там течет своя жизнь</p>
+						</div>
+						<!--Картинка 1 причины-->
+						<div class="reason__image">
+							<img></img>
+						</div>
 					</div>
 				</div>
+
 				<!--Описание причины 1-->
-				<div class="reason__descr">
-					<section class="reason__advantage">
-						<h2 class="reason__advantage-title">Жилье</h2>
-						<p>Рекомендуем пожить в настоящем мотеле, все как в настоящем кино!</p>
-					</section>
-				</div>
-				<div class="reason__descr">
-					<section class="reason__advantage">
-						<h2 class="reason__advantage-title">Сувениры</h2>
-						<p>Не только китайского, но и местного производства!</p>
-					</section>
-				</div>
-				<div class="reason__descr">
-					<section class="reason__advantage">
-						<h2 class="reason__advantage-title">Еда</h2>
-						<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
-					</section>
-				</div>
-			</div>
-			<!--2 Причина-->
-			<div class="reason">
-				<div class="reason__item">
-					<!--Заголовок 2 причины-->
-					<div class="reason__header">
-						<h2 class="reason__title">Там есть мост дьявол</h2>
-						<p class="reason__number">-№2-</p>
-						<p class="reason__descr-title">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-					</div>
-					<!--Картинка 1 причины-->
-					<div class="reason__image">
-						<img></img>
+				<div class="advantages">
+					<div class="advantages__wrap">
+						<section class="advantages__description">
+							<h2 class="advantage__title">Жилье</h2>
+							<p>Рекомендуем пожить в настоящем мотеле, все как в настоящем кино!</p>
+						</section>
+						<section class="advantages__description">
+							<h2 class="advantage__title">Сувениры</h2>
+							<p>Не только китайского, но и местного производства!</p>
+						</section>
+						<section class="advantages__description">
+							<h2 class="advantage__title">Еда</h2>
+							<p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+						</section>
 					</div>
 				</div>
-			</div>
-			<!--3 Причина-->
-			<div class="reason">
-				<div class="reason__item">
-					<!--Заголовок 3 причины-->
-					<div class="reason__header">
-						<h2 class="reason__title">Небольшая площадь</h2>
-						<p class="reason__number">-№3-</p>
-						<p class="reason__descr-title">Все достопримечательности находятся очень близко</p>
+
+				<!--2 Причина-->
+				<div class="reasons">
+					<div class="reason">
+						<!--Заголовок 2 причины-->
+						<div class="reason__header">
+							<h2 class="reason__title">Там есть мост дьявол</h2>
+							<p class="reason__number">-№2-</p>
+							<p class="reason__descr-title">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+						</div>
+						<!--Картинка 1 причины-->
+						<div class="reason__image">
+							<img></img>
+						</div>
 					</div>
 				</div>
-			</div>
-			<!--4 Причина-->
-			<div class="reason">
-				<div class="reason__item">
-					<!--Заголовок 4 причины-->
-					<div class="reason__header">
-						<h2 class="reason__title">Красивая дорога</h2>
-						<p class="reason__number">-№4-</p>
-						<p class="reason__descr-title">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+
+				<!--3,4,5 Причины-->
+				<div class="reasons-container">
+					<div class="reasons">
+						<div class="reason__item">
+							<!--Заголовок 3 причины-->
+							<div class="reason__header">
+								<h2 class="reason__title">Небольшая площадь</h2>
+								<p class="reason__number">-№3-</p>
+								<p class="reason__descr-title">Все достопримечательности находятся очень близко</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="reasons">
+						<div class="reason__item">
+							<div class="reason__header">
+								<h2 class="reason__title">Красивая дорога</h2>
+								<p class="reason__number">-№4-</p>
+								<p class="reason__descr-title">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="reasons">
+						<div class="reason__item">
+							<div class="reason__header">
+								<h2 class="reason__title">Красивая дорога</h2>
+								<p class="reason__number">-№5-</p>
+								<p class="reason__descr-title">Большинство едет в Гранд Каньон и толпится там</p>
+							</div>
+						</div>
 					</div>
 				</div>
-			</div>
-			<!--5 Причина-->
-			<div class="reason">
-				<div class="reason__item">
-					<!--Заголовок 5 причины-->
-					<div class="reason__header">
-						<h2 class="reason__title">Красивая дорога</h2>
-						<p class="reason__number">-№5-</p>
-						<p class="reason__descr-title">Большинство едет в Гранд Каньон и толпится там</p>
-					</div>
-				</div>
+		
+        	<!--Предложение-->
+        	<section class="offer">	
+            	<h2 class="offer__title">Заинтересовались?</h2>
+            	<p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            	<a class="offer__btn" href="#">
+               	Найти гостиницу 
+            	</a>
+        	</section>
+		
+			<!--Карта-->
+        	<div class="map">
+
 			</div>
 		</div>
-		
-        <!--Предложение-->
-        <section class="offer">	
-            <h2 class="offer__title">Заинтересовались?</h2>
-            <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="offer__btn" href="#">
-               Найти гостиницу 
-            </a>
-        </section>
-		
-		<!--Карта-->
-        <div class="map">
-				<div class="map__item"></div>
-		</div>
-      </main>
+    </main>
 	  
-      <!--Футер-->
-      <footer class="page-footer">
+    <!--Футер-->
+    <footer class="page-footer">
 		<div class="page-footer__wrap">
-			<div class="hashtag-link">
-				<a class="hashtag-link__visit" href="">#Visitsedona</a>
+			<div class="page-footer__item">
+				<a class="page-footer__link-hashtag" href="/">#Visitsedona</a>
 			</div>
 			<div class="social-links">
 				<a class="social-links__tw" href="tw.com"></a>
 				<a class="social-links__vk" href="vk.com"></a>
 				<a class="social-links__youtobe" href="youtobe.ru"></a>
 			</div>
-			<div class="copyright-link">
-				<a class="copyright-link__dev" href="/">Разработано</a>
+			<div class="page-footer__item">
+				<a class="page-footer__link-copyright" href="/">Разработано</a>
 			</div>
 		</div>
-      </footer>
+    </footer>
       <!-- <script src="js/script.js"></script> -->
    </body>
- </html>
+</html>
